--- a/src/app/sport/sport.component.html
+++ b/src/app/sport/sport.component.html
@@ -3,5 +3,5 @@
   [mapItemToLabel]="mapItemToLabel"
   [mapItemToRoute]="mapItemToRoute"
   [arrow]="arrow"
-  [emptyMessage]="'No skills available'">
+  [emptyMessage]="'Items Not Found'">
 </app-dropdownmenu>
