--- a/src/app/sport/sport-dropdown/sport-dropdown.component.html
+++ b/src/app/sport/sport-dropdown/sport-dropdown.component.html
@@ -1,5 +1,5 @@
 <app-dropdownmenu
-  [title]="'Season'"
+  [title]="'Sport'"
   [dataList]="dataList$"
   [mapItemToLabel]="mapItemToLabel"
   [mapItemToRoute]="mapItemToRoute"
