--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <tui-root>
   <app-header [title]="title"></app-header>
   <app-sport-dropdown></app-sport-dropdown>
-  <app-season></app-season>
+  <app-season-dropdown></app-season-dropdown>
   <app-sidebar></app-sidebar>
 </tui-root>
