--- a/src/app/season/season-dropdown/season-dropdown.component.html
+++ b/src/app/season/season-dropdown/season-dropdown.component.html
@@ -2,7 +2,7 @@
   [title]="'Season'"
   [dataList]="dataList$"
   [mapItemToLabel]="mapItemToLabel"
-  [mapItemToRoute]="mapItemToRoute"
+  [mapItemToRoute]="seasonRoute"
   [arrow]="arrow"
   [emptyMessage]="'Items Not Found'">
 </app-dropdownmenu>
