--- a/src/app/sport/sport-dropdown/sport-dropdown.component.html
+++ b/src/app/sport/sport-dropdown/sport-dropdown.component.html
@@ -2,7 +2,7 @@
   [title]="'Sport'"
   [dataList]="dataList$"
   [mapItemToLabel]="mapItemToLabel"
-  [mapItemToRoute]="mapItemToRoute"
+  [mapItemToRoute]="sportRout"
   [arrow]="arrow"
   [emptyMessage]="'Items Not Found'">
 </app-dropdownmenu>
