--- a/src/app/components/sport/index.less
+++ b/src/app/components/sport/index.less
@@ -1,4 +1,4 @@
-@import '@taiga-ui/core/styles/taiga-ui-local.less';
+@import '../../../../node_modules/@taiga-ui/core/styles/taiga-ui-local.less';
 
 tui-app-bar {
   box-shadow: var(--tui-shadow-navigation);
