--- a/src/app/components/sport/sport-dropdown/sport-dropdown.component.html
+++ b/src/app/components/sport/sport-dropdown/sport-dropdown.component.html
@@ -4,5 +4,6 @@
   [mapItemToLabel]="mapItemToLabel"
   [mapItemToRoute]="sportRout"
   [arrow]="arrow"
-  [emptyMessage]="'Items Not Found'">
+  [emptyMessage]="'Items Not Found'"
+>
 </app-dropdownmenu>
