--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,96 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+  height: 100%;
+}
+
+body {
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: auto;
+
+  font: var(--tui-font-text-m);
+  background-color: var(--tui-base-07);
+  color: var(--tui-primary-text);
+
+  @media (prefers-reduced-motion) {
+    scroll-behavior: auto;
+  }
+}
+
+header {
+  background-color: var(--tui-base-08);
+  color: var(--tui-primary-text);
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto;
+  justify-content: stretch;
+  padding: 10px;
+}
+
+nav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 10px; // Adjust the gap size as needed
+}
+
+main {
+  background-color: var(--tui-base-07);
+  height: 100vh;
+}
+
+tui-root {
+  font-size: 20px;
+}
+
+aside {
+  display: flex;
+  padding: 20px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: var(--tui-base-09);
+  min-height: 100%;
+  min-width: 100%;
+  color: var(--tui-base-02);
+}
+
+aside > * {
+  margin-bottom: 20px;
+  // gap between objects in aside
+}
+
+.container {
+  height: 100vh;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 70% 28%;
+  //background-color: aqua;
+}
+
+@media screen and (max-width: 480px) {
+  .container {
+    grid-template-columns: auto;
+  }
+}
+
+.content{
+  display: grid;
+  grid-template-rows: 10% 90%;
+  padding: 10px;
+  background-color: beige;
+}
+
+.content__title{
+  display: flex;
+  justify-content: center;  /* align horizontal */
+  align-items: center;      /* align vertical */
+  background-color: darkgreen;
+}
+
+.content__body {
+  padding: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: white;
+}
