--- a/src/app/shared/ui/dropdownmenu/dropdownmenu.component.html
+++ b/src/app/shared/ui/dropdownmenu/dropdownmenu.component.html
@@ -1,6 +1,6 @@
 <tui-hosted-dropdown
   [content]='content'
-  class="tui-space_vertical-4 tui-space_horizontal-2"
+  class=""
 >
   <button
     tuiButton
@@ -25,9 +25,9 @@
           >
             {{ mapItemToLabel(item) }}
             @if("rla.isActive"){
-              <tui-svg
-                src="tuiIconCheck"
-              ></tui-svg>
+<!--              <tui-svg-->
+<!--                src="tuiIconCheck"-->
+<!--              ></tui-svg>-->
             }
           </a>
         </tui-opt-group>
