--- a/src/styles.less
+++ b/src/styles.less
@@ -63,7 +63,7 @@ aside > * {
   height: 100vh;
   padding: 20px;
   display: grid;
-  grid-template-columns: 70% 28%;
+  grid-template-columns: 70% 26.5%;
   //background-color: aqua;
 }
 
@@ -93,4 +93,19 @@ aside > * {
   justify-content: flex-start;
   align-items: flex-start;
   background-color: white;
+}
+
+.one_col_container{
+  display: grid;
+  grid-template-columns: auto;
+  min-width: 100%;
+}
+
+.list-of-items-with-data * {
+  margin-bottom: 15px;
+  // gap between objects in aside
+}
+
+.list-of-items-with-data {
+  padding: 10px;
 }
