--- a/src/app/shared/ui/list-of-items-island/list-of-items-island.component.html
+++ b/src/app/shared/ui/list-of-items-island/list-of-items-island.component.html
@@ -23,10 +23,10 @@
     </a>
   </div>
     } @empty {
-      No Links
+      No Items Found
     }
   } @else {
-    'Oops'
+    <tui-loader [inheritColor]="true"></tui-loader>
   }
 </div>
 
