--- a/src/app/components/sport/item-sport/item-sport-with-season/item-sport-with-season.component.html
+++ b/src/app/components/sport/item-sport/item-sport-with-season/item-sport-with-season.component.html
@@ -30,7 +30,7 @@
   <aside>
     <h4>ASIDE MENU</h4>
     <hr>
-    <div class="flex__fullwidth_center">
+    <div class="block__fullwidth_center" style="display: block">
       <app-dropdownmenu
         [title]="'Select Season'"
         [dataList]="seasons$"
