--- a/src/app/shared/ui/headermenu/header-menu.component.less
+++ b/src/app/shared/ui/headermenu/header-menu.component.less
@@ -3,8 +3,6 @@ a[tuiLink] {
   font-size: 22px;
   font-weight: bold;
   padding-right: 10px;
-  //margin-bottom: 10px;  /* Add space at the bottom of each link */
-  //margin-top: 10px;     /* Add space at the top of each link */
   text-transform: uppercase;
 }
 
@@ -12,8 +10,7 @@ a[tuiLink]:hover {
   color:var(--tui-primary-hover);
 }
 
-a[tuiLink]:active {
-  color:var(--tui-primary-active)
+
+a.active {
+  color: var(--tui-primary);
 }
-
-
