--- a/src/app/components/sport/item-sport/item-sport.component.html
+++ b/src/app/components/sport/item-sport/item-sport.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="sport content__body">
       <div class="one_col_container">
-        <div class="sport content__body__title"><h3>LIST OF COMP</h3></div>
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
