buttns and titles

--- a/src/app/components/header/header.component.less
+++ b/src/app/components/header/header.component.less
@@ -1,3 +1,7 @@
+:host {
+  display: block;
+}
+
 a {
   color: white; /* or any other styles you prefer */
 }
@@ -5,3 +9,5 @@ a {
 a.active {
   color: var(--tui-primary); /* or any other styles you prefer */
 }
+
+
