--- a/src/app/components/sport/sport-nav/sport-nav.component.html
+++ b/src/app/components/sport/sport-nav/sport-nav.component.html
@@ -1,6 +1,8 @@
 <app-header-menu
   [dataList]="dataList$"
   [mapItemToLabel]="mapItemToLabel"
-  [mapItemToRoute]="sportRout"
+  [mapItemToSportRoute]="sportRout"
+  [mapItemToTeamsRoute]="sportTeamsRout"
+  [mapItemToPayersRoute]="sportPlayersRout"
 >
 </app-header-menu>
