--- a/src/app/components/sport/item-sport/item-sport.component.html
+++ b/src/app/components/sport/item-sport/item-sport.component.html
@@ -17,7 +17,8 @@
   <aside>
     <h4>ASIDE MENU</h4>
     <hr>
-    <app-season-dropdown></app-season-dropdown>
+    <router-outlet name="aside"></router-outlet>
+<!--    <app-season-dropdown></app-season-dropdown>-->
     <a
       appearance="primary"
       href=""
