--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -1,5 +1,7 @@
 <div class="tournament container">
+
   <div class="tournament content">
+
     <div class="tournament content__title">
       @if(this.tournament$ | async; as tournament) {
         <h3 class="tui-text_h3">
@@ -11,10 +13,18 @@
         </h3>
       }
     </div>
+
     <div class="tournament content__body">
-      <div class="one_col_container">
         <div class="tournament content__body__title">
-          <h3>LIST OF MATCHES</h3>
+          <app-body-title
+            titleMany = 'tournaments'
+          ></app-body-title>
+          <app-create-button
+            title = 'tournament'
+          ></app-create-button>
+        </div>
+
+        <div class="one_col_container">
           @if (matches$ | async; as matches) {
             @if (matches.length > itemsPerPage){
               <div class="pagination flex__fullwidth_center">
@@ -27,6 +37,7 @@
             }
           }
         </div>
+
         <div class="list-of-items-with-data" style="padding: 20px">
           @if(matches$ | async; as matches) {
           <app-list-of-matches
@@ -36,23 +47,16 @@
           </app-list-of-matches>
           }
         </div>
-      </div>
+
     </div>
   </div>
+
   <aside>
     <h4>ASIDE MENU</h4>
     <hr>
     <div class="block__fullwidth_center" style="display: block">
     </div>
-    <a
-      appearance="create"
-      href=""
-      tuiButton
-      type="button"
-      class="btn__create"
-    >
-      Create Match
-    </a>
+
 
   </aside>
 </div>
