--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,6 @@
 @import '@taiga-ui/core/styles/taiga-ui-local.less';
+@import '@taiga-ui/styles/taiga-ui-global';
+
 
 html {
   height: 100%;
@@ -69,11 +71,6 @@ aside > * {
   //background-color: aqua;
 }
 
-@media screen and (max-width: 480px) {
-  .container {
-    grid-template-columns: auto;
-  }
-}
 
 .content{
   display: grid;
@@ -89,6 +86,13 @@ aside > * {
   background-color: darkgreen;
 }
 
+.content__body__title{
+  display: grid;
+  grid-template-columns: 60% 22%;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
 .content__body__title__center {
   display: flex;
   justify-content: center;
@@ -97,7 +101,9 @@ aside > * {
 
 .content__body {
   padding: 20px;
-  display: flex;
+  display: grid;
+  grid-template-columns: 100%;
+  //flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   background-color: white;
@@ -163,4 +169,19 @@ aside > * {
   .wrapper-disabled({
     background: var(--tui-base-07);
   });
+}
+
+
+
+
+
+
+@media screen and (max-width: 600px) {
+  .container, .content__body__title {
+    padding: 30px;
+    grid-template-columns: 100%;
+    justify-content: center;  /* align horizontal */
+    align-items: center;      /* align vertical */
+
+  }
 }
