--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -15,28 +15,77 @@
     </div>
 
     <div class="tournament content__body">
+      <div class="one_col_container">
         <div class="tournament content__body__title">
-          <app-body-title
-            titleMany = 'tournaments'
-          ></app-body-title>
-          <app-create-button
-            title = 'tournament'
-          ></app-create-button>
+            <app-body-title
+              titleMany = 'matches'
+            ></app-body-title>
+            <app-create-button
+              title = 'match'
+            ></app-create-button>
         </div>
 
-        <div class="one_col_container">
-          @if (matches$ | async; as matches) {
-            @if (matches.length > itemsPerPage){
-              <div class="pagination flex__fullwidth_center">
-                <tui-pagination
-                  [index]="currentPageIndex - 1"
-                  [length]="Math.ceil(matches.length / itemsPerPage)"
-                  (indexChange)="setPage($event + 1)"
-                ></tui-pagination>
-              </div>
-            }
-          }
+        <div class="filters flex__fullwidth_center">
+          <div class="" style="display: grid; padding: 10px">FILTER</div>
+          <div class="" style="display: grid; padding: 10px">FILTER</div>
+          <div class="" style="display: grid; padding: 10px">FILTER</div>
+          <div class="" style="display: grid; padding: 10px">FILTER</div>
+          <div class="" style="display: grid; padding: 10px">FILTER</div>
         </div>
+
+
+<!--        @if(matches$ | async; as items){-->
+<!--          <form-->
+<!--            class="b-form"-->
+<!--            [formGroup]="form"-->
+<!--          >-->
+<!--            <tui-input-->
+<!--              formControlName="match"-->
+<!--            >-->
+<!--              Match Week-->
+<!--              <tui-data-list-wrapper-->
+<!--                *tuiDataList-->
+<!--                [itemContent]="stringify | tuiStringifyContent"-->
+<!--                [items]="items | tuiFilterByInput: matcherMatch"-->
+<!--              ></tui-data-list-wrapper>-->
+<!--            </tui-input>-->
+<!--          </form>-->
+<!--        }-->
+
+        <div class="search flex__fullwidth_center">
+
+          <div class="" style="display: grid; padding: 10px; min-width: 100%">
+            <div class="tui-form__row">
+            <form
+              [formGroup]="testForm"
+            >
+                <tui-input
+                  formControlName="nameValue"
+                >
+                  Search by WEEK
+                  <input
+                    (change)="onSearch()"
+                    tuiTextfield
+                  />
+                </tui-input>
+<!--              <button type="submit">Search</button>-->
+            </form>
+            </div>
+          </div>
+
+        </div>
+
+        @if (matches$ | async; as matches) {
+          @if (matches.length > itemsPerPage){
+            <div class="pagination" style="display: grid">
+              <tui-pagination
+                [index]="currentPageIndex - 1"
+                [length]="Math.ceil(matches.length / itemsPerPage)"
+                (indexChange)="setPage($event + 1)"
+              ></tui-pagination>
+            </div>
+          }
+        }
 
         <div class="list-of-items-with-data" style="padding: 20px">
           @if(matches$ | async; as matches) {
@@ -48,6 +97,7 @@
           }
         </div>
 
+      </div>
     </div>
   </div>
 
