front pag and search

--- a/src/app/components/season/season.component.html
+++ b/src/app/components/season/season.component.html
@@ -1,6 +1,6 @@
 @if(dataList$ | async; as dataList){
   <app-list-of-items-island
-    [data]="dataList"
+    [data$]="dataList$"
     [formatPath]="seasonHref"
     [titleProperty]="titleProperty"
   ></app-list-of-items-island>
