--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -88,26 +88,26 @@
 
         <div class="search block__fullwidth_center">
 
-          <div class="" style="display: block; padding: 10px; min-width: 100%">
-            <div class="tui-form__row">
-            <form
-              [formGroup]="testForm"
-            >
-                <tui-input
-                  formControlName="nameValue"
-                >
-                  Search by WEEK
-                  <input
-                    style="min-width: max-content"
-                    (change)="onSearch()"
-                    tuiTextfield
-                  />
-                </tui-input>
+<!--          <div class="" style="display: block; padding: 10px; min-width: 100%">-->
+<!--            <div class="tui-form__row">-->
+<!--            <form-->
+<!--              [formGroup]="testForm"-->
+<!--            >-->
+<!--                <tui-input-->
+<!--                  formControlName="nameValue"-->
+<!--                >-->
+<!--                  Search by WEEK-->
+<!--                  <input-->
+<!--                    style="min-width: max-content"-->
+<!--                    (change)="onSearch()"-->
+<!--                    tuiTextfield-->
+<!--                  />-->
+<!--                </tui-input>-->
 
 
-            </form>
-            </div>
-          </div>
+<!--            </form>-->
+<!--            </div>-->
+<!--          </div>-->
 
           <div class="" style="display: block; padding: 10px;">
             <div class="tui-form__row">
