--- a/src/app/shared/ui/list-of-items-island/list-of-items-island.component.html
+++ b/src/app/shared/ui/list-of-items-island/list-of-items-island.component.html
@@ -1,5 +1,5 @@
 <div class="list-of-items-with-data">
-  @if(data){
+  @if(data$ | async; as data){
     @for(item of data; track item.id){
   <div class="item-with-data-island">
     <a
