refactor after signals!

--- a/src/app/components/sport/sport.component.html
+++ b/src/app/components/sport/sport.component.html
@@ -1,4 +1,7 @@
-<div class="tui-container_adaptive">
-  <h3>Sports</h3>
-</div>
-
+<h3>Sports</h3>
+<!--@if(sportsSig$()) {-->
+<!--  @for (sport of sportsSig$(); track sport.id) {-->
+<!--   {{ sport.title }}-->
+<!--  }-->
+<!--}-->
+<router-outlet></router-outlet>
