--- a/src/app/components/sport/sport.component.html
+++ b/src/app/components/sport/sport.component.html
@@ -1,4 +1,4 @@
-<h3>Sports</h3>
+<!--<h3>Sports</h3>-->
 <!--@if(sportsSig$()) {-->
 <!--  @for (sport of sportsSig$(); track sport.id) {-->
 <!--   {{ sport.title }}-->
