--- a/src/app/components/sport/sport-dropdown/sport-dropdown.component.html
+++ b/src/app/components/sport/sport-dropdown/sport-dropdown.component.html
@@ -2,7 +2,7 @@
   [title]="'Sport'"
   [dataList]="dataList$"
   [mapItemToLabel]="mapItemToLabel"
-  [mapItemToRoute]="sportRout"
+  [mapItemToRoute]="sportRoutWithSeason"
   [arrow]="arrow"
   [emptyMessage]="'Items Not Found'"
 >
