--- a/src/app/components/sport/sport-nav/sport-nav.component.html
+++ b/src/app/components/sport/sport-nav/sport-nav.component.html
@@ -1,7 +1,7 @@
 <app-header-menu
   [dataList]="dataList$"
   [mapItemToLabel]="mapItemToLabel"
-  [mapItemToSportRoute]="sportRout"
+  [mapItemToSportRoute]="sportRoutWithSeason"
   [mapItemToTeamsRoute]="sportTeamsRout"
   [mapItemToPayersRoute]="sportPlayersRout"
 >
