--- a/src/app/components/sport/item-sport/item-sport.component.html
+++ b/src/app/components/sport/item-sport/item-sport.component.html
@@ -1,7 +1,7 @@
 <div class="sport container">
   <div class="sport content">
     <div class="sport content__title">
-      @if(this.item$ | async; as item) {
+      @if(item$ | async; as item) {
         <h3 class="tui-text_h3">{{item.title | uppercase}}</h3>
       } @else {
         <h3 class="tui-text_h3">Sport not found</h3>
