--- a/src/app/components/team/list-of-teams/list-of-teams.component.html
+++ b/src/app/components/team/list-of-teams/list-of-teams.component.html
@@ -15,29 +15,57 @@
     </a>
   </div>
 </div>
+
+<app-form-search-text
+  [data$]="teams$"
+  [searchTitle]="'team name'"
+  [parameter]="'title'"
+></app-form-search-text>
+
+<app-list-of-items-island
+  [data$]="paginationService.paginatedItems$"
+  [formatPath]="formatPath"
+  [titleProperty]="titleProperty">
+</app-list-of-items-island>
+
 @if (teams$ | async; as teams) {
-  @if (teams.length > itemsPerPage){
-    <div class="pagination flex__fullwidth_center">
-      <tui-pagination
-        [index]="currentPageIndex.value - 1"
-        [length]="totalPages"
-        (indexChange)="setPage($event + 1)"
-      ></tui-pagination>
-    </div>
+  @if (teams.length > paginationService.itemsPerPage.value){
+    @if (paginationService.totalPages$ | async; as totalPages) {
+      <div class="pagination flex__fullwidth_center">
+        <tui-pagination
+          [index]="paginationService.currentPageIndex.value - 1"
+          [length]="totalPages"
+          (indexChange)="paginationService.setPage($event + 1)"
+        ></tui-pagination>
+      </div>
+    }
   }
-
-  <app-form-search-text
-    [data$]="teams$"
-    [searchTitle]="'team name'"
-    [parameter]="'title'"
-  ></app-form-search-text>
-
-  <app-list-of-items-island
-    [data$]="paginatedTeams$"
-    [formatPath]="formatPath"
-    [titleProperty]="titleProperty">
-  </app-list-of-items-island>
 }
+
+
+<!--@if (teams$ | async; as teams) {-->
+<!--  @if (teams.length > itemsPerPage){-->
+<!--    <div class="pagination flex__fullwidth_center">-->
+<!--      <tui-pagination-->
+<!--        [index]="currentPageIndex.value - 1"-->
+<!--        [length]="totalPages"-->
+<!--        (indexChange)="setPage($event + 1)"-->
+<!--      ></tui-pagination>-->
+<!--    </div>-->
+<!--  }-->
+
+<!--  <app-form-search-text-->
+<!--    [data$]="teams$"-->
+<!--    [searchTitle]="'team name'"-->
+<!--    [parameter]="'title'"-->
+<!--  ></app-form-search-text>-->
+
+<!--  <app-list-of-items-island-->
+<!--    [data$]="paginatedTeams$"-->
+<!--    [formatPath]="formatPath"-->
+<!--    [titleProperty]="titleProperty">-->
+<!--  </app-list-of-items-island>-->
+<!--}-->
 
 
 <!--  [data$]="teams$ | slice: (currentPageIndex - 1) * itemsPerPage : currentPageIndex * itemsPerPage"-->
