--- a/src/app/components/team/list-of-teams/list-of-teams.component.html
+++ b/src/app/components/team/list-of-teams/list-of-teams.component.html
@@ -16,19 +16,44 @@
   </div>
 </div>
 
-@if (teams$ | async; as teams) {
-  @if (teams.length > paginationService.itemsPerPage.value){
-    @if (paginationService.totalPages$ | async; as totalPages) {
-      <div class="pagination flex__fullwidth_center">
-        <tui-pagination
-          [index]="paginationService.currentPageIndex.value - 1"
-          [length]="totalPages"
-          (indexChange)="paginationService.setPage($event + 1)"
-        ></tui-pagination>
-      </div>
-    }
-  }
-}
+<app-pagination-with-items-per-page
+  [items$]="teams$"
+  [itemPerPageForm]="itemPerPageForm"
+>
+</app-pagination-with-items-per-page>
+
+<!--@if (teams$ | async; as teams) {-->
+<!--  @if (teams.length > paginationService.itemsPerPage.value){-->
+<!--    @if (paginationService.totalPages$ | async; as totalPages) {-->
+
+
+<!--      <div class="pagination" style="display: flex; justify-content: space-between; align-items: center;">-->
+<!--        <div style="flex: 1;"></div>-->
+<!--        <div style="flex: 2; text-align: center;">-->
+<!--          <tui-pagination-->
+<!--            [index]="paginationService.currentPageIndex.value - 1"-->
+<!--            [length]="totalPages"-->
+<!--            (indexChange)="paginationService.setPage($event + 1)"-->
+<!--          ></tui-pagination>-->
+<!--        </div>-->
+<!--        <div style="flex: 1;">-->
+<!--          <form-->
+<!--            [formGroup]="itemPerPageForm"-->
+<!--          >-->
+<!--            <tui-input-number-->
+<!--              formControlName="itemPerPageValue"-->
+<!--              class="b-form"-->
+<!--              (tuiValueChanges)="changePaginationPerPage()"-->
+<!--            >-->
+<!--              ITEMS PER PAGE-->
+<!--            </tui-input-number>-->
+<!--          </form>-->
+<!--        </div>-->
+<!--      </div>-->
+
+<!--    }-->
+<!--  }-->
+<!--}-->
 
 <app-form-search-text
   [data$]="teams$"
