--- a/src/app/components/sport/item-sport/with-teams/with-teams.component.html
+++ b/src/app/components/sport/item-sport/with-teams/with-teams.component.html
@@ -1,5 +1,5 @@
 <app-list-of-teams
   [teams$]="teams$"
-  [formatPath]="teamHref"
+  [formatPath]="teamItemHref"
   [titleProperty]="islandTitleProperty"
 ></app-list-of-teams>
