--- a/src/app/components/sport/sport.component.html
+++ b/src/app/components/sport/sport.component.html
@@ -1,4 +1,8 @@
-<router-outlet></router-outlet>
+<div class="sport container">
+  <div class="sport content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
 
 
 <!--<h3>Sports</h3>-->
