--- a/src/app/components/tournament/tournament.component.html
+++ b/src/app/components/tournament/tournament.component.html
@@ -1,1 +1,5 @@
-<p>tournaments works!</p>
+<div class="tournament container">
+  <div class="tournament content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
