--- a/src/app/components/sport/item-sport/item-sport-with-season/item-sport-with-season.component.html
+++ b/src/app/components/sport/item-sport/item-sport-with-season/item-sport-with-season.component.html
@@ -1,71 +1,50 @@
-<div class="sport container">
-  <div class="sport content">
-    <div class="sport content__title">
-      @if(this.sport$ | async; as sport) {
-        <h3 class="tui-text_h3">{{sport.title | uppercase}}</h3>
-      } @else {
-        <h3 class="tui-text_h3">
-          <tui-loader [inheritColor]="true"></tui-loader>
-        </h3>
-      }
-    </div>
-    <div class="sport content__body">
-      <div class="one_col_container">
-        <div class="sport content__body__title">
-          <h3>LIST OF TOURNAMENTS</h3>
-        </div>
-        <div class="sport content__body__title">
-          <h4>YEAR {{ this.year }}</h4>
-        </div>
-        <hr>
-        @if(tournaments$ | async) {
-          <app-pagination-with-items-per-page
-            [items$]="tournaments$"
-          >
-          </app-pagination-with-items-per-page>
-          <app-form-search-text
-            [data$]="tournaments$"
-            [searchTitle]="'tournament title'"
-            [parameter]="'title'"
-          ></app-form-search-text>
-          <app-list-of-items-island
-              [data$]="paginationService.paginatedItems$"
-              [formatPath]="tournamentItemHref"
-              [titleProperty]="islandTitleProperty"
-          ></app-list-of-items-island>
-        } @else {
-          <tui-loader [inheritColor]="true"></tui-loader>
-        }
-      </div>
-    </div>
+@if (this.sport$ | async; as sport) {
+  <div class="sport content__title">
+    <h3 class="tui-text_h3">{{ sport.title | uppercase }}</h3>
   </div>
-  <aside>
-    <h4>ASIDE MENU</h4>
-    <hr>
-    <div class="block__fullwidth_center" style="display: block">
-      @if (sport$ | async; as sport) {
+  <div class="sport content__body">
+    <div class="one_col_container">
+      <div class="sport content__body__title__flex">
+        <app-body-title
+          titleMany='tournaments'
+        ></app-body-title>
+        <app-create-button
+          [title]="'tournament'"
+        ></app-create-button>
+
         <app-sport-with-season-dropdown
           [sportId]="sport.id"
         ></app-sport-with-season-dropdown>
-      }
-<!--      <app-dropdownmenu-->
-<!--        [title]="'Select Season'"-->
-<!--        [dataList]="seasonsWithSportId$"-->
-<!--        [mapItemToLabel]="mapItemToLabelYear"-->
-<!--        [mapItemToRoute]="seasonSportRoute"-->
-<!--        [arrow]="arrow"-->
-<!--        [emptyMessage]="'Items Not Found'">-->
-<!--      </app-dropdownmenu>-->
-    </div>
-    <a
-      appearance="create"
-      href=""
-      tuiButton
-      type="button"
-      class="btn__create"
-    >
-      Create Tournament
-    </a>
+      </div>
+      <div class="sport content__body__title">
 
-  </aside>
-</div>
+        <h4>YEAR {{ this.year }}</h4>
+      </div>
+      <hr>
+      @if (tournaments$ | async) {
+        <app-pagination-with-items-per-page
+          [items$]="tournaments$"
+        ></app-pagination-with-items-per-page>
+
+        <app-form-search-text
+          [data$]="tournaments$"
+          [searchTitle]="'tournament title'"
+          [parameter]="'title'"
+        ></app-form-search-text>
+
+        <app-list-of-items-island
+          [data$]="paginationService.paginatedItems$"
+          [formatPath]="tournamentItemHref"
+          [titleProperty]="islandTitleProperty"
+        ></app-list-of-items-island>
+      } @else {
+        <tui-loader [inheritColor]="true"></tui-loader>
+      }
+    </div>
+  </div>
+
+} @else {
+  <h3 class="tui-text_h3">
+    <tui-loader [inheritColor]="true"></tui-loader>
+  </h3>
+}
