--- a/src/app/shared/ui/dropdownmenu/sport-with-season-dropdown/sport-with-season-dropdown.component.html
+++ b/src/app/shared/ui/dropdownmenu/sport-with-season-dropdown/sport-with-season-dropdown.component.html
@@ -1,10 +1,8 @@
-<div class="block__fullwidth_center" style="display: block">
-  <app-dropdownmenu
-    [title]="'Select Season'"
-    [dataList]="seasonsWithSportId$"
-    [mapItemToLabel]="mapItemToLabelYear"
-    [mapItemToRoute]="seasonSportRoute"
-    [arrow]="arrow"
-    [emptyMessage]="'Items Not Found'">
-  </app-dropdownmenu>
-</div>
+<app-dropdownmenu
+  [title]="'SEASON'"
+  [dataList]="seasonsWithSportId$"
+  [mapItemToLabel]="mapItemToLabelYear"
+  [mapItemToRoute]="seasonSportRoute"
+  [arrow]="arrow"
+  [emptyMessage]="'Items Not Found'">
+</app-dropdownmenu>
