--- a/src/styles.less
+++ b/src/styles.less
@@ -1,23 +1,33 @@
 @import '@taiga-ui/core/styles/taiga-ui-local.less';
 @import '@taiga-ui/styles/taiga-ui-global';
 
+router-outlet {
+  display: none;
+}
 
 html {
-  height: 100%;
+  //height: 100%;
 }
 
 body {
-  display: grid;
-  grid-template-rows: 100%;
-  grid-template-columns: 100%;
+  //min-height: 100%;
+  //display: grid;
+  //grid-template-rows: 100%;
+  //grid-template-columns: 100%;
 
   font: var(--tui-font-text-m);
-  background-color: var(--tui-base-07);
+  //background-color: var(--tui-base-07);
   color: var(--tui-primary-text);
 
   @media (prefers-reduced-motion) {
     scroll-behavior: auto;
   }
+}
+
+.main_container {
+  min-height: 100%;
+  display: grid;
+  background-color: var(--tui-base-06);
 }
 
 header {
@@ -38,8 +48,8 @@ nav {
 }
 
 main {
-  background-color: var(--tui-base-07);
-  height: 100vh;
+  //background-color: var(--tui-base-07);
+  //height: 100%;
 }
 
 tui-root {
@@ -64,33 +74,49 @@ aside > * {
 }
 
 .container {
-  height: 100vh;
+  //height: 100%;
   padding: 20px;
   display: grid;
-  grid-template-columns: 70% 26.5%;
+  grid-template-columns: auto;
+  justify-content: stretch;
   //background-color: aqua;
 }
 
 
-.content{
+.content {
+  //height: 100%;
   display: grid;
-  grid-template-rows: 10% 90%;
+  align-items: start;
+  //grid-template-rows: 10% 90%;
   padding: 10px;
-  background-color: beige;
+  //background-color: red;
 }
 
-.content__title{
+.content__title {
+  //font-size: 30px;
   display: grid;
-  justify-content: center;  /* align horizontal */
-  align-items: center;      /* align vertical */
-  background-color: darkgreen;
+  justify-content: center; /* align horizontal */
+  align-items: center; /* align vertical */
+  background-color: var(--tui-success-bg-night-hover);
 }
 
-.content__body__title{
+.content__body__title {
   display: grid;
   grid-template-columns: 60% 22%;
   align-items: center;
   justify-content: space-evenly;
+}
+
+.content__body__title__flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.content__body__title__flex > *:first-child {
+  margin-right: auto;
 }
 
 .content__body__title__center {
@@ -100,16 +126,17 @@ aside > * {
 }
 
 .content__body {
+  //height: 100%;
   padding: 20px;
   display: grid;
   grid-template-columns: 100%;
   //flex-direction: column;
   justify-content: center;
   align-items: start;
-  background-color: white;
+  background-color: var(--tui-base-04);
 }
 
-.one_col_container{
+.one_col_container {
   display: grid;
   grid-template-columns: 100%;
   min-width: 100%;
@@ -148,18 +175,6 @@ aside > * {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 // This goes into global, non-encapsulated styles
 [tuiWrapper][data-appearance='create'] {
   background: var(--tui-positive-night-hover);
@@ -179,16 +194,12 @@ aside > * {
 }
 
 
-
-
-
-
 @media screen and (max-width: 600px) {
   .container, .content__body__title {
     padding: 30px;
     grid-template-columns: 100%;
-    justify-content: center;  /* align horizontal */
-    align-items: center;      /* align vertical */
+    justify-content: center; /* align horizontal */
+    align-items: center; /* align vertical */
 
   }
 }
